<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/icon_home_checked"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_movie"
        android:enabled="true"
        android:icon="@drawable/icon_discover_checked"
        android:title="@string/title_movie"/>

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/icon_search_checked"
        android:title=""/>

    <item
        android:id="@+id/navigation_favorite"
        android:enabled="true"
        android:icon="@drawable/icon_favourite_checked"
        android:title="@string/title_favorite"/>

</menu>